2018-08-25  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #23578]
	regex: fix uninitialized memory access
	I introduced this bug into gnulib in commit
	8335a4d6c7b4448cd0bcb6d0bebf1d456bcfdb17 dated 2006-04-10;
	eventually it was merged into glibc.  The bug was found by
	project-repo <bugs@feusi.co> and reported here:
	https://lists.gnu.org/r/sed-devel/2018-08/msg00017.html
	Diagnosis and draft fix reported by Assaf Gordon here:
	https://lists.gnu.org/r/bug-gnulib/2018-08/msg00071.html
	https://lists.gnu.org/r/bug-gnulib/2018-08/msg00142.html
	* posix/regex_internal.c (build_wcs_upper_buffer):
	Fix bug when mbrtowc returns 0.

2018-08-27 Martin Kuchta  <martin.kuchta@netapp.com>
	   Torvald Riegel  <triegel@redhat.com>

	[BZ #23538]
	* nptl/pthread_cond_common.c (__condvar_quiesce_and_switch_g1):
	Update r to include the set wake-request flag if waiters are
	remaining after spinning.

2018-08-03  DJ Delorie  <dj@redhat.com>

	* sysdeps/riscv/rvf/math_private.h (libc_feholdexcept_setround_riscv):
	Move libc_fesetround_riscv after libc_feholdexcept_riscv.

	* sysdeps/riscv/rv64/rvd/libm-test-ulps: Update.

2018-08-14  Florian Weimer  <fweimer@redhat.com>

	[BZ #23521]
	[BZ #23522]
	* nss/nss_files/files-alias.c (get_next_alias): During :include:
	processing, bail out if no room, and close the stream before
	returning ERANGE.
	* nss/Makefile (tests): Add tst-nss-files-alias-leak.
	(tst-nss-files-alias-leak): Link with libdl.
	(tst-nss-files-alias-leak.out): Depend on nss_files.

	* nss/tst-nss-files-alias-leak.c: New file.

2018-08-14  Florian Weimer  <fweimer@redhat.com>

	* nscd/nscd_conf.c (nscd_parse_file): Deallocate old storage for
	server_user, stat_user.

2018-08-13  Florian Weimer  <fweimer@redhat.com>

	* misc/error.c (error): Add missing va_end call.
	(error_at_line): Likewise.

2018-08-10  Florian Weimer  <fweimer@redhat.com>

	[BZ #23497]
	* sysdeps/unix/sysv/linux/getdents64.c (handle_overflow): New
	function.